--- a/style.css
+++ b/style.css
@@ -37,3 +37,24 @@ Template: twentyseventeen
   text-align: center;
   margin-bottom: 0.75rem;
 }
+
+img.attachmnt-twentyseventeen-featured-image.wp-post-image {
+  height: 50vh;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 1000px) {
+  article.type-post header.entry-header {
+    position: absolute;
+    top: -575px;
+    z-index: 3;
+  }
+}
+
+article.type-post h1.entry-title {
+  margin-bottom: 0;
+}
+
+#page #content {
+  padding-top: 2rem;
+}
