Modified 'content.php' to add a new class 'not-front' to the <header> element for post titles (the one with the 'entry-title' class), so that I can differentiate between when the <header> element is on a single post's page, or being concatenated on the homepage. Changed selector in 'style.css' to avoid repositioning the element when on the homepage.

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img.attachmnt-twentyseventeen-featured-image.wp-post-image {
 }
 
 @media screen and (min-width: 1000px) {
-  article.type-post header.entry-header {
+  article.type-post .entry-header.not-front {
     position: absolute;
     top: -575px;
     z-index: 3;
