--- a/style.css
+++ b/style.css
@@ -68,13 +68,15 @@ img.site-branding.static {
   padding: 0;
 }
 
-.front-post-thumb {
-  width: 300px;
-  height: 180px;
-  position: absolute;
-  left: -20rem;
-  top: 0;
-}
 .entry-header.front-feed {
   position: relative;
+}
+@media screen and (min-width: 1000px) {
+  .front-post-thumb {
+    width: 300px;
+    height: 180px;
+    position: absolute;
+    left: -20rem;
+    top: 0;
+  }
 }
