Added media query around absolute positioning code for the post thubnails (leaving their size declaration in another selector outside of the media query) and output a new  helder class on the 'recent-posts' <div>.

--- a/style.css
+++ b/style.css
@@ -71,10 +71,12 @@ img.site-branding.static {
 .entry-header.front-feed {
   position: relative;
 }
+.front-post-thumb {
+  width: 300px;
+  height: 180px;
+}
 @media screen and (min-width: 1000px) {
   .front-post-thumb {
-    width: 300px;
-    height: 180px;
     position: absolute;
     left: -20rem;
     top: 0;
