--- a/style.css
+++ b/style.css
@@ -72,13 +72,25 @@ img.site-branding.static {
   position: relative;
 }
 .front-post-thumb {
-  width: 300px;
-  height: 180px;
+  max-width: 300px;
+  max-height: 180px;
 }
 @media screen and (min-width: 1000px) {
   .front-post-thumb {
     position: absolute;
     left: -20rem;
     top: 0;
+  }
+}
+@media screen and (max-width: 999px) {
+  .recent-posts.front-feed .entry-header.front-feed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .front-post-thumb {
+    width: auto;
+    height: auto;
   }
 }
