--- a/style.css
+++ b/style.css
@@ -10,17 +10,24 @@ Template: twentyseventeen
   min-width: 100%;
 }
 
-.contact-form-element, .contact-privacy-notice {
-  display: inline-block;
+@media screen and (min-width: 768px) {
+  .contact-form-element, .contact-privacy-notice {
+    display: inline-block;
+  }
+  .contact-form-element {
+    width: 60%;
+  }
+  .contact-privacy-notice {
+    width: 35%;
+    vertical-align: middle;
+    float: right;
+    margin-top: 20%;
+  }
 }
-.contact-form-element {
-  width: 60%;
-}
-.contact-privacy-notice {
-  width: 35%;
-  vertical-align: middle;
-  float: right;
-  margin-top: 20%;
+@media screen and (max-width: 767px) {
+  .contact-form-element, .contact-privacy-notice {
+    display: block;
+  }
 }
 
 .post-type-attr {
