Renamed wrapper class 'feed-entry-category' to 'feed-entry-categories' and put some basic, functionality-level styles for it in 'styles.css'. Also through in a little space between the SVG icons and the category/tag lists.

--- a/style.css
+++ b/style.css
@@ -146,3 +146,14 @@ img.site-branding.static {
   max-width: 300px;
   padding-top: 0.5rem;
 }
+
+.feed-entry-categories ul.post-categories {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0;
+  list-style: none;
+}
+
+.feed-entry-categories > svg.icon, .feed-entry-tags > svg.icon {
+  padding-right: 3px;
+}
