Added a wrapper element around just the post and date, and used flexbox on that to position the categories and tag lists.

--- a/style.css
+++ b/style.css
@@ -158,11 +158,13 @@ img.site-branding.static {
   padding-right: 3px;
 }
 
-.feed-entry-categories, .feed-entry-tags {
-  display: inline-block;
-  max-width: 48%;
+.feed-entry-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
-// .feed-entry-tags {
-//   float: right;
+// .feed-entry-categories, .feed-entry-tags {
+//   display: inline-block;
+//   max-width: 48%;
 // }
