--- a/style.css
+++ b/style.css
@@ -162,9 +162,22 @@ img.site-branding.static {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 0.5rem;
 }
 
-// .feed-entry-categories, .feed-entry-tags {
-//   display: inline-block;
-//   max-width: 48%;
-// }
+.feed-entry-categories a, .feed-entry-tags a {
+  font-style: italic;
+  -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
+  transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
+  transition: color 80ms ease-in, box-shadow 130ms ease-in-out;
+  transition: color 80ms ease-in, box-shadow 130ms ease-in-out, -webkit-box-shadow 130ms ease-in-out;
+}
+.feed-entry-categories a:hover, .feed-entry-tags a:hover {
+  color: #000;
+  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0), 0 3px 0 rgba(0, 0, 0, 1);
+}
+
+ul.menu-blog li:nth-of-type(2) {
+  border-right: 1px solid #E5F0F7;
+}
