--- a/style.css
+++ b/style.css
@@ -165,6 +165,12 @@ img.site-branding.static {
   margin-bottom: 0.5rem;
 }
 
+.feed-entry-date {
+  text-align: center;
+  font-size: 1.25rem;
+  margin-bottom: 0.5rem;
+}
+
 .feed-entry-categories a, .feed-entry-tags a {
   font-style: italic;
   -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
