Caused longer lists of categories and tags to indent beneath their SVG icons after line breaks by setting a negative 'text-indent' and a positive 'padding-left'.

--- a/style.css
+++ b/style.css
@@ -171,6 +171,11 @@ img.site-branding.static {
   margin-bottom: 0.5rem;
 }
 
+.feed-entry-categories, .feed-entry-tags {
+  text-indent: -15px;
+  padding-left: 15px;
+}
+
 .feed-entry-categories a, .feed-entry-tags a {
   font-style: italic;
   -webkit-transition: color 80ms ease-in, -webkit-box-shadow 130ms ease-in-out;
