--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ img.site-branding.static {
   margin-bottom: 0.5rem;
 }
 
+.feed-entry-title {
+  margin-bottom: 0.25rem;
+}
+
 .feed-entry-categories, .feed-entry-tags {
   text-indent: -15px;
   padding-left: 15px;
