Added a little section in the 'site-info' <div> in the footer, as a child <div>, and styled it based on an assumption of its containing only one <p> element or one <a> element (or probably an <a> within a <p>).

--- a/style.css
+++ b/style.css
@@ -218,3 +218,8 @@ img.site-branding.static {
 ul.menu-blog li:nth-of-type(2) {
   border-right: 1px solid #E5F0F7;
 }
+
+.site-closer a, .site-closer p {
+  font-variant: small-caps;
+  margin-top: 1rem;
+}
