--- a/style.css
+++ b/style.css
@@ -218,6 +218,9 @@ img.site-branding.static {
 ul.menu-blog li:nth-of-type(2) {
   border-right: 1px solid #E5F0F7;
 }
+#top-menu:not(.menu-blog) li:last-of-type {
+  border-left: 1px solid #E5F0F7;
+}
 
 .site-closer a, .site-closer p {
   margin-top: 1rem;
