Moved the markup for the widget's headline into the  variable in the es_subbox() function. Added a line of CSS to remove padding around the widget-added wrapper, to keep white space consistent.

--- a/style.css
+++ b/style.css
@@ -225,3 +225,7 @@ ul.menu-blog li:nth-of-type(2) {
 .site-closer a, .site-closer p {
   margin-top: 1rem;
 }
+
+.es_caption {
+  padding-bottom: 0;
+}
