--- a/style.css
+++ b/style.css
@@ -229,3 +229,30 @@ ul.menu-blog li:nth-of-type(2) {
 .es_caption {
   padding-bottom: 0;
 }
+
+.button-link {
+  background-color: #ddd;
+  border: 0;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  color: #222;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-weight: 800;
+  line-height: 1;
+  padding: 1em 2em;
+  text-shadow: none;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.button-link:hover, .button-link:focus {
+  background: #bbb;
+}
+
+#home-blog-button {
+  float: right;
+}
