--- a/style.css
+++ b/style.css
@@ -58,6 +58,31 @@ img.attachmnt-twentyseventeen-featured-image.wp-post-image, .page-template:not(.
   }
 }
 
+.section-header-button {
+  min-width: 100%;
+  position: relative;
+}
+@media screen and (max-width: 479px) {
+  .section-header-button {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  #home-blog-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+@media screen and (max-width: 479px) {
+  #home-blog-button {
+    align-self: center;
+  }
+}
+
 article.type-post h1.entry-title {
   margin-bottom: 0;
 }
@@ -248,6 +273,4 @@ ul.menu-blog li:nth-of-type(2) {
   transition: background 0.2s;
 }
 
-#home-blog-button {
-  float: right;
-}
+
