Fixed a problem where the pageslice code wasn't running until after the page was reloaded, due to some caching thing with the jQuery.ready loading method. (Changed to plain JS window.onload). Also added the selector prefix to the background color statement in the CSS, to avoid modifying posts in feeds.

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ img.site-branding.static {
     bottom: 232px;
   }
   /* Article text displaced over featured image, <main> reduced by 232px in JS */
-  article.type-post .entry-content {
+  .feed-post-listing > article.type-post .entry-content {
     padding: 1rem;
     background-color: rgba(255, 255, 255, 0.85);
   }
