--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ img.site-branding.static {
   .entry-summary.front-feed:not(.no-thumb) > p:first-of-type {
     padding-top: 1rem;
     vertical-align: bottom;
-  }
+  } 
 }
 
 .entry-content {
@@ -163,9 +163,8 @@ img.site-branding.static {
     max-width: 400px;
     vertical-align: middle
   }
-  .fb-page {
+  .fb_iframe_widget {
     float: right;
-    min-height: 500px;
   }
 }
 @media screen and (max-width: 999px) {
@@ -286,3 +285,5 @@ ul.menu-blog li:nth-of-type(2) {
   -webkit-transition: background 0.2s;
   transition: background 0.2s;
 }
+
+
